# pydantic-extensions

./: .gitignore  .python-version  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  tox.ini
.github/workflows/: check.yml
src/karpyncho/pydantic_extensions/: __init__.py
src/tests/: test_init.py  test_pydantic_extensions.py
